[package]
name = "finalspark-rs"
version = "0.1.4"
edition = "2021"
authors = ["0xCheez", "MaidenLabs"]
description = "A Rust library for live data recording from MEA devices."
license = "MIT"
homepage = "https://maidenlabs.ai"
repository = "https://github.com/maidenlabs/finalspark-rs"
documentation = "https://maidenlabs.ai"
readme = "README.md"
keywords = ["live-data", "MEA", "recording", "rust"]
categories = ["science", "science::neuroscience"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
url = "2.5"